timer sounds and minor layout bugs fixes

--- a/src/components/DonationModal/DonationModal.module.scss
+++ b/src/components/DonationModal/DonationModal.module.scss
@@ -39,10 +39,13 @@ h2 {
   border: 2px dotted #ccc;
 
   span {
-    display: block;
-    font-weight: 400;
     margin-bottom: 10px;
-    text-align: center;
     padding: 5px;
+    font-size: 14px;
+    font-weight: 400;
+    border-radius: 5px;
+    text-align: center;
+    user-select: all;
+    background-color: #c1c1c1;
   }
 }
